--- a/public/styles.css
+++ b/public/styles.css
@@ -15,3 +15,218 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.section__container{
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 5rem 1rem;
+}
+
+.section__subheader{
+    max-width: fit-content;
+    padding: 8px;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 100%;
+}
+
+.section__header{
+    font-size: 2.5rem;
+    font-weight: 600;
+    line-height: 3.25rem;
+    color: var(--text-dark);
+}
+
+.section__header span{
+    color: var(--primary-color);
+}
+
+.section__description{
+    color: var(--text-light);
+    line-height: 1.5rem;
+}
+
+.btn{
+    padding: calc(0.75rem + 2px) 1.5rem;
+    outline: none;
+    border: none;
+    font-size: 1rem;
+    color: var(--white);
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: var(--primary-color-dark);
+}
+
+img{
+    display: flex;
+    width: 100%;
+}
+
+a{
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+ul{
+    list-style: none;
+}
+
+html,
+body{
+    scroll-behavior: smooth;
+}
+
+body{
+    font-family: "Roboto", sans-serif;
+}
+
+nav{
+    position: fixed;
+    isolation: isolate;
+    width: 100%;
+    z-index: 9;
+}
+
+.nav__header{
+    padding: 1rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--primary-color);
+}
+
+.nav__logo a{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--white);
+}
+
+.nav__logo a span{
+    padding: 2px 10px;
+    color: var(--primary-color);
+    background-color: var(--white);
+    border-radius: 5px;
+}
+
+.nav__menu__btn{
+    font-size: 1.5rem;
+    color: var(--white);
+    cursor: pointer;
+}
+
+.nav__links{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    background-color: var(--primary-color);
+    transition: transform 0.5s;
+    z-index: -1;
+}
+
+.nav__links.open{
+    transform: translateY(100%);
+}
+
+.nav__links a{
+    font-weight: 500;
+    color: var(--white);
+}
+
+.nav__btn{
+    display: none;
+}
+
+@media (width > 768px) {
+    nav{
+        position: static;
+        padding: 2rem 1rem 1rem;
+        max-width: var(--max-width);
+        margin-inline: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1rem;
+    }
+
+    .nav__header{
+        flex: 1;
+        padding: 0;
+        background: transparent;
+    }
+
+    .nav__logo a{
+        font-size: 1.5rem;
+        color: var(--primary-color);
+    }
+
+    .nav__logo a span{
+        padding: 4px 14px;
+        color: var(--white);
+        background-color: var(--primary-color);
+    }
+
+    .nav__menu__btn{
+        display: none;
+    }
+
+    .nav__links{
+        position: static;
+        padding: 0;
+        max-width: fit-content;
+        flex-direction: row;
+        background-color: transparent;
+        transform: none;
+    }
+
+    .nav__links a{
+        color: var(--text-dark);
+    }
+
+    .nav__links a:hover{
+        color: var(--primary-color);
+    }
+
+    .nav__links li:last-child{
+        display: none;
+    }
+
+    .nav__btn{
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .nav__btn a{
+        padding: 0.75rem 1.5rem;
+        font-size: 1rem;
+        font-weight: 500;
+        color: var(--text-dark);
+        white-space: nowrap;
+        border: 2px solid var(--primary-color);
+        border-radius: 10px;
+    }
+
+    .nav__btn a:hover{
+        color: var(--white);
+        background-color: var(--primary-color);
+    }
+}
