--- a/public/styles.css
+++ b/public/styles.css
@@ -155,6 +155,96 @@ nav{
     display: none;
 }
 
+.header__container{
+    display: grid;
+    gap: 4rem 2rem;
+    overflow: hidden;
+}
+
+.header__image{
+    position: relative;
+    isolation: isolate;
+}
+
+.header__image img{
+    max-width: 350px;
+    margin-inline: auto;
+}
+
+.header__image::before,
+.header__image::after{
+    position: absolute;
+    content: "";
+    height: 80%;
+    width: 100%;
+    max-width: 400px;
+}
+
+.header__image::before{
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--primary-color);
+    z-index: -2;
+}
+
+.header__image::after{
+    bottom: -3rem;
+    left: 50%;
+    transform: translateX(calc(-50% - 3rem));
+    border: 5px solid var(--text-dark);
+    opacity: 0.75;
+    border-radius: 5px;
+    z-index: -1;
+}
+
+.header__content .section__subheader{
+    margin-inline: auto;
+}
+
+.header__content h1{
+    margin-bottom: 2rem;
+    font-size: 4rem;
+    font-weight: 600;
+    line-height: 4.25rem;
+    color: var(--text-dark);
+    text-align: center;
+}
+
+.header__content h1 span{
+    color: var(--primary-color);
+}
+
+.header__content .section__description{
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.header__btns{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.header__btns a{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--text-dark);
+}
+
+.header__btns a span{
+    font-size: 1.5rem;
+    color: var(--primary-color);
+}
+
+.header__btns a:hover{
+    color: var(--primary-color);
+}
+
 @media (width > 768px) {
     nav{
         position: static;
@@ -228,5 +318,26 @@ nav{
     .nav__btn a:hover{
         color: var(--white);
         background-color: var(--primary-color);
+    }
+
+    .header__container{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+
+    .header__content .section__subheader{
+        margin-inline-start: unset;
+    }
+
+    .header__content :is(h1, .section__description){
+        text-align: left;
+    }
+
+    .header__btns{
+        justify-content: flex-start;
+    }
+
+    .header__image{
+        grid-area: 1/2/2/3;
     }
 }
