--- a/public/styles.css
+++ b/public/styles.css
@@ -1,28 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-  --primary-color: #0db75f;
-  --primary-color-dark: #0c9a51;
-  --text-dark: #030712;
-  --text-light: #6b7280;
-  --extra-light: #d1d5db;
-  --white: #ffffff;
-  --max-width: 1200px;
+    --primary-color: #0db75f;
+    --primary-color-dark: #0c9a51;
+    --text-dark: #030712;
+    --text-light: #6b7280;
+    --extra-light: #d1d5db;
+    --white: #ffffff;
+    --max-width: 1200px;
 }
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.section__container{
+.section__container {
     max-width: var(--max-width);
     margin: auto;
     padding: 5rem 1rem;
 }
 
-.section__subheader{
+.section__subheader {
     max-width: fit-content;
     padding: 8px;
     margin-bottom: 0.5rem;
@@ -33,23 +33,23 @@
     border-radius: 100%;
 }
 
-.section__header{
+.section__header {
     font-size: 2.5rem;
     font-weight: 600;
     line-height: 3.25rem;
     color: var(--text-dark);
 }
 
-.section__header span{
+.section__header span {
     color: var(--primary-color);
 }
 
-.section__description{
+.section__description {
     color: var(--text-light);
     line-height: 1.5rem;
 }
 
-.btn{
+.btn {
     padding: calc(0.75rem + 2px) 1.5rem;
     outline: none;
     border: none;
@@ -61,41 +61,41 @@
     cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: var(--primary-color-dark);
 }
 
-img{
+img {
     display: flex;
     width: 100%;
 }
 
-a{
+a {
     text-decoration: none;
     transition: 0.3s;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
 html,
-body{
+body {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     font-family: "Roboto", sans-serif;
 }
 
-nav{
+nav {
     position: fixed;
     isolation: isolate;
     width: 100%;
     z-index: 9;
 }
 
-.nav__header{
+.nav__header {
     padding: 1rem;
     width: 100%;
     display: flex;
@@ -104,7 +104,7 @@ nav{
     background-color: var(--primary-color);
 }
 
-.nav__logo a{
+.nav__logo a {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -113,20 +113,20 @@ nav{
     color: var(--white);
 }
 
-.nav__logo a span{
+.nav__logo a span {
     padding: 2px 10px;
     color: var(--primary-color);
     background-color: var(--white);
     border-radius: 5px;
 }
 
-.nav__menu__btn{
+.nav__menu__btn {
     font-size: 1.5rem;
     color: var(--white);
     cursor: pointer;
 }
 
-.nav__links{
+.nav__links {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -142,37 +142,37 @@ nav{
     z-index: -1;
 }
 
-.nav__links.open{
+.nav__links.open {
     transform: translateY(100%);
 }
 
-.nav__links a{
+.nav__links a {
     font-weight: 500;
     color: var(--white);
 }
 
-.nav__btn{
+.nav__btn {
     display: none;
 }
 
-.header__container{
+.header__container {
     display: grid;
     gap: 4rem 2rem;
     overflow: hidden;
 }
 
-.header__image{
+.header__image {
     position: relative;
     isolation: isolate;
 }
 
-.header__image img{
+.header__image img {
     max-width: 350px;
     margin-inline: auto;
 }
 
 .header__image::before,
-.header__image::after{
+.header__image::after {
     position: absolute;
     content: "";
     height: 80%;
@@ -180,7 +180,7 @@ nav{
     max-width: 400px;
 }
 
-.header__image::before{
+.header__image::before {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -188,7 +188,7 @@ nav{
     z-index: -2;
 }
 
-.header__image::after{
+.header__image::after {
     bottom: -3rem;
     left: 50%;
     transform: translateX(calc(-50% - 3rem));
@@ -198,11 +198,11 @@ nav{
     z-index: -1;
 }
 
-.header__content .section__subheader{
+.header__content .section__subheader {
     margin-inline: auto;
 }
 
-.header__content h1{
+.header__content h1 {
     margin-bottom: 2rem;
     font-size: 4rem;
     font-weight: 600;
@@ -211,23 +211,23 @@ nav{
     text-align: center;
 }
 
-.header__content h1 span{
+.header__content h1 span {
     color: var(--primary-color);
 }
 
-.header__content .section__description{
+.header__content .section__description {
     margin-bottom: 2rem;
     text-align: center;
 }
 
-.header__btns{
+.header__btns {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2rem;
 }
 
-.header__btns a{
+.header__btns a {
     display: flex;
     align-items: center;
     gap: 5px;
@@ -236,105 +236,105 @@ nav{
     color: var(--text-dark);
 }
 
-.header__btns a span{
+.header__btns a span {
     font-size: 1.5rem;
     color: var(--primary-color);
 }
 
-.header__btns a:hover{
+.header__btns a:hover {
     color: var(--primary-color);
 }
 
-.stats__container{
+.stats__container {
     display: flex;
     gap: 1rem;
     flex-direction: column;
 }
 
-.stats__card{
+.stats__card {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1rem;
 }
 
-.stats__card h4{
+.stats__card h4 {
     margin-bottom: 0.5rem;
     font-size: 2.5rem;
     font-weight: 600;
     color: var(--primary-color);
 }
 
-.stats__card p{
+.stats__card p {
     font-size: 1.2rem;
     color: var(--text-dark);
 }
 
-.skill__container{
+.skill__container {
     display: grid;
     gap: 2rem;
 }
 
-.skill__content .section__header{
+.skill__content .section__header {
     margin-bottom: 1rem;
 }
 
-.skill__content .section__description{
+.skill__content .section__description {
     margin-bottom: 2rem;
 }
 
-.skill__grid{
+.skill__grid {
     display: grid;
     gap: 1rem;
 }
 
-.skill__card{
+.skill__card {
     padding: 1rem;
     border-radius: 5px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.05);
 }
 
-.skill__card span{
+.skill__card span {
     display: inline-block;
     margin-bottom: 1rem;
     font-size: 1.5rem;
     color: var(--primary-color);
 }
 
-.skill__card h4{
+.skill__card h4 {
     margin-bottom: 0.5rem;
     font-size: 1.2rem;
     font-weight: 600;
     color: var(--text-dark);
 }
 
-.skill__card p{
+.skill__card p {
     color: var(--text-light);
     line-height: 1.5rem;
 }
 
-.portfolio__container{
+.portfolio__container {
     display: grid;
     gap: 2rem 0;
 }
 
-.portfolio__content{
+.portfolio__content {
     padding-inline: 1rem;
 }
 
-.portfolio__content .section__header{
+.portfolio__content .section__header {
     margin-bottom: 1rem;
 }
 
-.portfolio__content .section__description{
+.portfolio__content .section__description {
     margin-bottom: 2rem;
 }
 
-.portfolio__image__wrapper{
+.portfolio__image__wrapper {
     overflow-x: hidden;
 }
 
-.portfolio__image{
+.portfolio__image {
     width: max-content;
     display: flex;
     align-items: center;
@@ -343,56 +343,125 @@ nav{
     animation: scroll 45s linear infinite;
 }
 
-.portfolio__image img{
+.portfolio__image img {
     max-width: 300px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.05);
 }
 
-@keyframes scroll{
-    to{
+.review__container {
+    padding-bottom: 0;
+}
+
+.review__container .section__header {
+    max-width: 450px;
+}
+
+.swiper {
+    padding-block: 4rem 5rem;
+    width: 100%;
+}
+
+.swiper-slide {
+    max-width: 400px;
+}
+
+.review__card {
+    padding: 1.5rem;
+    max-width: 400px;
+    border-radius: 1rem;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.05);
+}
+
+.review__ratings {
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.review__ratings span {
+    color: goldenrod;
+}
+
+.review__ratings span:last-child {
+    color: var(--extra-light);
+}
+
+.review__card p {
+    margin-bottom: 2rem;
+    color: var(--text-dark);
+    line-height: 1.5rem;
+}
+
+.review__details{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.review__details img{
+    max-width: 50px;
+    border-radius: 100%;
+}
+
+.review__details h4{
+    margin-bottom: 5px;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--text-dark);
+}
+
+.review__details h5{
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--text-light);
+}
+
+@keyframes scroll {
+    to {
         transform: translateX(calc(-50% - 0.5rem));
     }
 }
 
-@media (width >540px){
-    .stats__container{
+@media (width >540px) {
+    .stats__container {
         flex-direction: row;
         align-items: center;
         justify-content: space-evenly;
     }
 
-    .stats__card{
+    .stats__card {
         align-items: flex-start;
         flex-direction: column;
         gap: 0;
     }
 
-    .stats__divider{
+    .stats__divider {
         height: 75px;
         width: 2px;
         background-color: var(--primary-color);
     }
 
-    .skill__grid{
+    .skill__grid {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
     }
 
-    .skill__card:nth-child(1){
+    .skill__card:nth-child(1) {
         grid-area: 1/1/3/2;
     }
 
-    .skill__card:nth-child(2){
+    .skill__card:nth-child(2) {
         grid-area: 2/2/4/3;
     }
 
-    .skill__card:nth-child(3){
+    .skill__card:nth-child(3) {
         grid-area: 3/1/5/2;
     }
 }
 
 @media (width > 768px) {
-    nav{
+    nav {
         position: static;
         padding: 2rem 1rem 1rem;
         max-width: var(--max-width);
@@ -403,28 +472,28 @@ nav{
         gap: 1rem;
     }
 
-    .nav__header{
+    .nav__header {
         flex: 1;
         padding: 0;
         background: transparent;
     }
 
-    .nav__logo a{
+    .nav__logo a {
         font-size: 1.5rem;
         color: var(--primary-color);
     }
 
-    .nav__logo a span{
+    .nav__logo a span {
         padding: 4px 14px;
         color: var(--white);
         background-color: var(--primary-color);
     }
 
-    .nav__menu__btn{
+    .nav__menu__btn {
         display: none;
     }
 
-    .nav__links{
+    .nav__links {
         position: static;
         padding: 0;
         max-width: fit-content;
@@ -433,25 +502,25 @@ nav{
         transform: none;
     }
 
-    .nav__links a{
+    .nav__links a {
         color: var(--text-dark);
     }
 
-    .nav__links a:hover{
+    .nav__links a:hover {
         color: var(--primary-color);
     }
 
-    .nav__links li:last-child{
+    .nav__links li:last-child {
         display: none;
     }
 
-    .nav__btn{
+    .nav__btn {
         flex: 1;
         display: flex;
         justify-content: flex-end;
     }
 
-    .nav__btn a{
+    .nav__btn a {
         padding: 0.75rem 1.5rem;
         font-size: 1rem;
         font-weight: 500;
@@ -461,49 +530,47 @@ nav{
         border-radius: 10px;
     }
 
-    .nav__btn a:hover{
+    .nav__btn a:hover {
         color: var(--white);
         background-color: var(--primary-color);
     }
 
-    .header__container{
+    .header__container {
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
     }
 
-    .header__content .section__subheader{
+    .header__content .section__subheader {
         margin-inline-start: unset;
     }
 
-    .header__content :is(h1, .section__description){
+    .header__content :is(h1, .section__description) {
         text-align: left;
     }
 
-    .header__btns{
+    .header__btns {
         justify-content: flex-start;
     }
 
-    .header__image{
+    .header__image {
         grid-area: 1/2/2/3;
     }
 
-    .skill__container{
+    .skill__container {
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
     }
 
-    .portfolio__container{
-        grid-template-columns: 
-        minmax(0, 1fr)
-        repeat(3, minmax(o, calc(var(--max-width / 3))))
-        minmax(0, 1fr);
+    .portfolio__container {
+        grid-template-columns:
+            minmax(0, 1fr) repeat(3, minmax(o, calc(var(--max-width / 3)))) minmax(0, 1fr);
     }
 
-    .portfolio__content{
+    .portfolio__content {
         grid-column: 2/3;
     }
 
-    .portfolio__image__wrapper{
+    .portfolio__image__wrapper {
         grid-column: 3/6;
     }
 }
