--- a/public/styles.css
+++ b/public/styles.css
@@ -393,28 +393,68 @@ nav {
     line-height: 1.5rem;
 }
 
-.review__details{
+.review__details {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
-.review__details img{
+.review__details img {
     max-width: 50px;
     border-radius: 100%;
 }
 
-.review__details h4{
+.review__details h4 {
     margin-bottom: 5px;
     font-size: 1rem;
     font-weight: 600;
     color: var(--text-dark);
 }
 
-.review__details h5{
+.review__details h5 {
     font-size: 1rem;
     font-weight: 400;
     color: var(--text-light);
+}
+
+.contact__container {
+    max-width: 600px;
+}
+
+.contact__container .section__subheader {
+    margin-inline: auto;
+}
+
+.contact__container .section__header {
+    margin-bottom: 1rem;
+    margin-inline: auto;
+    text-align: center;
+}
+
+.contact__container .section__description {
+    margin-bottom: 2rem;
+    margin-inline: auto;
+    text-align: center;
+}
+
+.contact__container form {
+    display: grid;
+    gap: 1rem;
+}
+
+.contact__container :is(input, textarea) {
+    padding: 1rem 0.75rem;
+    outline: none;
+    border: 1px solid var(--extra-light);
+    font-size: 1rem;
+    font-family: "Roboto", sans-serif;
+    color: var(--text-dark);
+    border-radius: 5px;
+}
+
+.contact__container .btn{
+    max-width: fit-content;
+    margin-inline: auto;
 }
 
 @keyframes scroll {
@@ -457,6 +497,19 @@ nav {
 
     .skill__card:nth-child(3) {
         grid-area: 3/1/5/2;
+    }
+
+    .contact__container form{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .contact__container textarea{
+        grid-column: 1/3;
+    }
+
+    .contact__container .btn{
+        grid-column: 2/3;
+        margin-inline-end: unset;
     }
 }
 
